test/fail/entity-name-double.app
//Entity TestEntity has both a name property and a property with name annotation.

application test

entity TestEntity {

	name :: String
	title :: String(name)
	
}

define page root() {}
